Make sure the close (X) on the Cocoa tab is white when highlighted.

Bug: 839534
Change-Id: I7242753e5777b15168ba8a0ff91a000a8a16c980
Reviewed-on: https://chromium-review.googlesource.com/1042624
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555885}
Former-commit-id: ee7b0b18d63d371c02a7f741dbffd87abeacf872